objects/Case.object
<CustomObject><businessProcesses>
        <fullName>MathWorks</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses><fields>
        <fullName>ACE__c</fullName>
        <formula>HYPERLINK( "http://inside-apps.mathworks.com/ace/openContact.do?objectId=" &amp;  Contact.Siebel_Contact_Id__c, "Link to Contact in ACE" )</formula>
        <label>ACE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>AUI__c</fullName>
        <formula>HYPERLINK( "http://inside-apps.mathworks.com/aui/search_main/show?entitlement_type=License", "Link to AUI" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUI</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Academic_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to link a Case ot Academic Support</description>
        <label>Academic Support Project</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Area_Region__c</fullName>
        <formula>LEFT((TEXT(Area__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Region</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Area_Short__c</fullName>
        <formula>IF ( CONTAINS((TEXT(Area__c)), "Customer Support"), "Customer Support", 
 IF ( CONTAINS((TEXT(Area__c)), "Technical Support"), "Technical Support",
  IF ( CONTAINS((TEXT(Area__c)), "Install"), "Install", null
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Short</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU - Customer Support</fullName>
                    <color>#0B6FCE</color>
                    <label>AU - Customer Support</label>
                </value>
                <value>
                    <fullName>AU - Customer Training</fullName>
                </value>
                <value>
                    <fullName>AU - Install</fullName>
                    <color>#78C953</color>
                    <label>AU - Install</label>
                </value>
                <value>
                    <fullName>AU - Revenue Accounting and Controls</fullName>
                    <color>#E27001</color>
                    <label>AU - Revenue Accounting and Controls</label>
                </value>
                <value>
                    <fullName>AU - Technical Support</fullName>
                    <color>#A845DC</color>
                    <label>AU - Technical Support</label>
                </value>
                <value>
                    <fullName>BNL - Customer Support</fullName>
                    <color>#F3D904</color>
                    <label>BNL - Customer Support</label>
                </value>
                <value>
                    <fullName>BNL - Customer Training</fullName>
                </value>
                <value>
                    <fullName>BNL - Install</fullName>
                    <color>#A53711</color>
                    <label>BNL - Install</label>
                </value>
                <value>
                    <fullName>BNL - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>BNL - Technical Support</fullName>
                    <color>#0B24BE</color>
                    <label>BNL - Technical Support</label>
                </value>
                <value>
                    <fullName>Business Applications</fullName>
                    <color>#419249</color>
                    <label>Business Applications</label>
                </value>
                <value>
                    <fullName>CH - Customer Support</fullName>
                    <color>#B6E32E</color>
                    <label>CH - Customer Support</label>
                </value>
                <value>
                    <fullName>CH - Customer Training</fullName>
                </value>
                <value>
                    <fullName>CH - Install</fullName>
                    <color>#641CCF</color>
                    <label>CH - Install</label>
                </value>
                <value>
                    <fullName>CH - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CH - Technical Support</fullName>
                    <color>#2F5D85</color>
                    <label>CH - Technical Support</label>
                </value>
                <value>
                    <fullName>CN - Customer Support</fullName>
                    <color>#AFCADF</color>
                    <label>CN - Customer Support</label>
                </value>
                <value>
                    <fullName>CN - Customer Training</fullName>
                </value>
                <value>
                    <fullName>CN - Install</fullName>
                    <color>#8F6429</color>
                    <label>CN - Install</label>
                </value>
                <value>
                    <fullName>CN - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CN - Technical Support</fullName>
                    <color>#57F17C</color>
                    <label>CN - Technical Support</label>
                </value>
                <value>
                    <fullName>DE - Customer Support</fullName>
                    <color>#0B6FCE</color>
                    <label>DE - Customer Support</label>
                </value>
                <value>
                    <fullName>DE - Customer Training</fullName>
                </value>
                <value>
                    <fullName>DE - Install</fullName>
                    <color>#78C953</color>
                    <label>DE - Install</label>
                </value>
                <value>
                    <fullName>DE - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>DE - Technical Support</fullName>
                    <color>#A845DC</color>
                    <label>DE - Technical Support</label>
                </value>
                <value>
                    <fullName>EMEA - Install</fullName>
                    <color>#F3D904</color>
                    <label>EMEA - Install</label>
                </value>
                <value>
                    <fullName>ES - Customer Support</fullName>
                    <color>#A53711</color>
                    <label>ES - Customer Support</label>
                </value>
                <value>
                    <fullName>ES - Customer Training</fullName>
                </value>
                <value>
                    <fullName>ES - Install</fullName>
                    <color>#66E9BD</color>
                    <label>ES - Install</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Attachments_Folder__c</fullName>
        <description>Secure Artifacts folder</description>
        <label>Attachments Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Auto_Close_Date_Time__c</fullName>
        <label>Auto Close Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Auto_Close_Days__c</fullName>
        <formula>IF ( 
(TEXT(Area__c)="BNL - Technical Support")||
(TEXT(Area__c)="CH - Technical Support")||
(TEXT(Area__c)="DE - Technical Support")||
(CONTAINS(TEXT(Area__c), "Install"))||
(TEXT(Area__c)="ES - Technical Support")||
(TEXT(Area__c)="FR - Technical Support")||
(TEXT(Area__c)="IN - Customer Support")||
(TEXT(Area__c)="IN - Technical Support")||
(TEXT(Area__c)="IT - Technical Support")||
(TEXT(Area__c)="Natick - Customer Support")||
(TEXT(Area__c)="Nordic - Technical Support")||
(TEXT(Area__c)="Natick - Technical Support")||
(TEXT(Area__c)="UK - Technical Support"), 3,
IF (
(TEXT(Area__c)="AU - Customer Support")||
(TEXT(Area__c)="AU - Technical Support")||
(TEXT(Area__c)="CN - Technical Support")||
(TEXT(Area__c)="KR - Technical Support"), 4, 5
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Close Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Auto_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Close</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BookProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Book Project</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Browser_Version__c</fullName>
        <label>Browser Version</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Browsers__c</fullName>
        <label>Browsers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Usage_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Case_Age_Collapsed_Time__c</fullName>
        <description>Faina created this formula for manager's dashboard , fomula calculated the case age in days</description>
        <formula>IF(IsClosed ,ROUND((ClosedDate - CreatedDate),0), ROUND((Now() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (elapsed days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Age_Days__c</fullName>
        <description>Field calculates Case Age in Days with 1 decimal places, excludes weekends. For Open Case  from Created Date to Now, for close date from Open Date to Close Date</description>
        <formula>If(IsNull(ClosedDate),
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(Now())  - DATE(1985,6,24),7),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2+2)
)
,
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(ClosedDate)  - DATE(1985,6,24),7),
ClosedDate - CreatedDate - (FLOOR((DateValue(ClosedDate) - DateValue(CreatedDate))/7)*2),
ClosedDate - CreatedDate - (FLOOR((DateValue(ClosedDate) - DateValue(CreatedDate))/7)*2+2)
)
-
CASE(MOD( DateValue(ClosedDate)  - DATE(1985,6,24),7)
  ,5, ClosedDate - DateTimeValue(DateValue(ClosedDate))
  ,6, ClosedDate - (DateTimeValue(DateValue(ClosedDate))-1)
  ,0)
)
-
CASE(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)
,5, DateTimeValue(DateValue(CreatedDate))+2-CreatedDate-2
,6, DateTimeValue(DateValue(CreatedDate))+1-CreatedDate-2
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Age in business hours (exclude weekend) for any case status.</inlineHelpText>
        <label>Case Age (Days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Age_Hours__c</fullName>
        <description>Calculate Case Age in Hours,  excludes weekend. For open cases from Created Date to Now, for close case from Created Date to Close Date, 2 decimal places</description>
        <formula>Custom_Case_Age__c * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Age in Hours excludes weekend</inlineHelpText>
        <label>Case Age (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Age_Munites__c</fullName>
        <description>Case Age in minutes exclude weekends. For open case from Created Date to Now, for close case from created date to close date</description>
        <formula>Case_Age_Days__c *24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case age in minutes excludes weekends</inlineHelpText>
        <label>Case Age (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Hours__c</fullName>
        <description>Created by Premier support to calculate case age in  hours including weekends</description>
        <formula>IF(  ISBLANK( ClosedDate ), 


IF ( (NOW()- CreatedDate) &gt; 0, 

( 24 *  (NOW()- CreatedDate) ) 
 
, 0),


(  24 *  (ClosedDate - CreatedDate ))

)</formula>
        <label>Case Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Minutes__c</fullName>
        <description>Case age in minutes elapsed time. For open case from created date to now, for close case from created date to close</description>
        <formula>IF( ISBLANK( ClosedDate ), 


IF ( D2subD1__c &gt; 0, 

( 24 * 60 * (NOW()- CreatedDate) ) 

, 0), 


( 24 * 60 * (ClosedDate - CreatedDate )) 

)</formula>
        <inlineHelpText>Case age in minutes elapsed time.</inlineHelpText>
        <label>Case Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Status__c</fullName>
        <description>The formula field is used to show overall Case status externally and mask some internal statuses so that we don't show them to customers in Customer Portal.
This field is only made available to Customer Portal Profile.</description>
        <formula>IF(ISPICKVAL(SubStatus__c,"Waiting for Internal") , "In Progress",  TEXT(SubStatus__c))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Base_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Code Generation</fullName>
                </value>
                <value>
                    <fullName>Component-Based Modeling</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control System Design and Analysis</fullName>
                </value>
                <value>
                    <fullName>Custom Code for Simulation</fullName>
                </value>
                <value>
                    <fullName>Database Connectivity</fullName>
                </value>
                <value>
                    <fullName>Data Import and Export</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Event-Based Modeling</fullName>
                </value>
                <value>
                    <fullName>External Hardware</fullName>
                </value>
                <value>
                    <fullName>Graphics, and Building UIs and Apps</fullName>
                </value>
                <value>
                    <fullName>Image Processing and Computer Vision</fullName>
                </value>
                <value>
                    <fullName>MATLAB Desktop and Environment</fullName>
                </value>
                <value>
                    <fullName>Math, Statistics, and Optimization</fullName>
                </value>
                <value>
                    <fullName>MEX and External Language Interfaces</fullName>
                </value>
                <value>
                    <fullName>Object-Oriented Programming</fullName>
                </value>
                <value>
                    <fullName>Parallel Computing</fullName>
                </value>
                <value>
                    <fullName>Programming Scripts and Functions</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Signal Processing and Communication</fullName>
                </value>
                <value>
                    <fullName>Simulink Block Creation</fullName>
                </value>
                <value>
                    <fullName>Simulink Modeling</fullName>
                </value>
                <value>
                    <fullName>Simulink Physical Modeling</fullName>
                </value>
                <value>
                    <fullName>Simulink Simulation and Visualization</fullName>
                </value>
                <value>
                    <fullName>Verification, Validation, and Test</fullName>
                </value>
                <value>
                    <fullName>Post Connectivity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Citation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked (by trigger) if at least 1 article related to the case has not been created by the person who created the article-case relationship (indicates re-use of articles)</description>
        <label>Citation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No License</fullName>
                </value>
                <value>
                    <fullName>Bug Fix</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Cluster_Location__c</fullName>
        <label>Cluster Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MATLAB Parallel Cloud</fullName>
                </value>
                <value>
                    <fullName>MDCS for Cloud (non-EC2)</fullName>
                </value>
                <value>
                    <fullName>MDCS for EC2</fullName>
                </value>
                <value>
                    <fullName>On-Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Contact_Account__c</fullName>
        <formula>Contact.Account.Name</formula>
        <label>Contact Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Denied_Prohibited__c</fullName>
        <formula>IF ( Contact.Denied_On_Watch_List_checkbox__c = TRUE, 
IMAGE ( "/img/samples/flag_red.gif", "True Image" ), ""
)</formula>
        <label>Contact Denied/Prohibited</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Created_Date__c</fullName>
        <formula>Text(DAY(DATEVALUE(CreatedDate))) &amp; " "&amp;
CASE(MONTH(DATEVALUE(CreatedDate)),
1, "Jan",
2, "Feb",
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun",
7, "Jul",
8, "Aug",
9, "Sep",
10, "Oct",
11, "Nov",
12, "Dec",
"None")
&amp;" " &amp;
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Submitted Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Custom_Case_Age__c</fullName>
        <formula>If(IsNull(ClosedDate),
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(Now())  - DATE(1985,6,24),7),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2+2)
)
,
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(ClosedDate)  - DATE(1985,6,24),7),
ClosedDate - CreatedDate - (FLOOR((DateValue(ClosedDate) - DateValue(CreatedDate))/7)*2),
ClosedDate - CreatedDate - (FLOOR((DateValue(ClosedDate) - DateValue(CreatedDate))/7)*2+2)
)
-
CASE(MOD( DateValue(ClosedDate)  - DATE(1985,6,24),7)
  ,5, ClosedDate - DateTimeValue(DateValue(ClosedDate))
  ,6, ClosedDate - (DateTimeValue(DateValue(ClosedDate))-1)
  ,0)
)
-
CASE(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)
,5, DateTimeValue(DateValue(CreatedDate))+2-CreatedDate-2
,6, DateTimeValue(DateValue(CreatedDate))+1-CreatedDate-2
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Case Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Customer_Artifacts__c</fullName>
        <formula>HYPERLINK( "http://sharpoint/" &amp; Id, "Id" )</formula>
        <label>Customer Artifacts</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Notificaiton_Release__c</fullName>
        <description>Release that the Customer Notification is sent for</description>
        <label>Customer Notification - Release</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Notification_Answer_T__c</fullName>
        <description>to capture the Answer Subject to leverage in the Customer Notification email</description>
        <label>Customer Notification - Answer Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Notification_Answers_URL__c</fullName>
        <description>contains the published Answer URL used in the Customer Notification process</description>
        <label>Customer Notification - Answers URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Customer_Notification_Case_CreateDate__c</fullName>
        <description>Create Date format used in the Customer Notificaiton Email Template</description>
        <formula>CASE(MONTH(DATEVALUE( CreatedDate )), 
1, "January", 
2, "February", 
3, "March", 
4, "April", 
5, "May", 
6, "June", 
7, "July", 
8, "August", 
9, "September", 
10, "October", 
11, "November", 
12, "December", 
"None") 
&amp; " " &amp; Text(DAY( DATEVALUE( CreatedDate ) )) 
&amp; ", " &amp; TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Notification - Case CreateDate</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Notification_Date_Sent__c</fullName>
        <description>Date the Cutomer Notification was sent</description>
        <label>Customer Notification - Date Sent</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Customer_Notification_EBR_indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>leveraged in the Customer Notification process to identify if the Case is impacted by an EBR</description>
        <label>Customer Notification - EBR indicator</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Customer_Notification_Geck_ID__c</fullName>
        <description>Geck ID used in the Cutomer Notification.  In addition to identify impacted Gecks, used to create teh EBR URL</description>
        <label>Customer Notification - Geck ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_Notification_Send_Notificatio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicator to send the Customer Notification</description>
        <label>Customer Notification - Send Notificatio</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Customer_Success_Engagement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Cases to support Install team</description>
        <label>Customer Success Engagement</label>
        <referenceTo>Customer_Success_Engagement__c</referenceTo>
        <relationshipLabel>Install Major Tasks</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>D2subD1__c</fullName>
        <description>This field is Created by Premier support to use in the field "Case Age (Hours)".</description>
        <formula>now() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2subD1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_between_Created_and_Last_Assigned__c</fullName>
        <formula>IF( ISNULL( Last_Assignment_Date__c ), First_Assignment_Date__c - CreatedDate , Last_Assignment_Date__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Created and Last Assigned</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_between_First_and_Last_Assignment__c</fullName>
        <formula>IF(ISNULL( Last_Assignment_Date__c ), 0 ,Last_Assignment_Date__c - First_Assignment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between First and Last Assignment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_since_Last_Assigned_Day__c</fullName>
        <description>FG - Days since Case was last assigned. If last assignment date is null, the calculation based on the first assignment date. For Close Date it calculates from Closed Date to Last assignment date, for Open from Now to Last Assignment date</description>
        <formula>IF(ISNULL( Last_Assignment_Date__c )  , IF( IsClosed , ClosedDate -  First_Assignment_Date__c ,  NOW() -  First_Assignment_Date__c ), 
IF( IsClosed , ClosedDate -   Last_Assignment_Date__c,  NOW() -  Last_Assignment_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Assignment Day</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_without_Activity__c</fullName>
        <description>Number of days since last activity was created - email outbound or call outbound</description>
        <formula>DATEVALUE(Now())- DATEVALUE(Last_Activity_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days without Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Delivery_Date__c</fullName>
        <description>to capture theDelivery Date</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Description_255__c</fullName>
        <label>Description 255</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Usage_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop/Laptop</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Email_Ref_Id__c</fullName>
        <formula>"ref:_"
&amp;LEFT( $Organization.Id,5)
&amp;IF(
BEGINS(RIGHT($Organization.Id,10),'0000000')
,RIGHT($Organization.Id,3)
,IF(
BEGINS(RIGHT($Organization.Id,10),'000000')
,RIGHT($Organization.Id,4)
,IF(
BEGINS(RIGHT($Organization.Id,10),'00000')
,RIGHT($Organization.Id,5)
,IF(
BEGINS(RIGHT($Organization.Id,10),'0000')
,RIGHT($Organization.Id,6)
,IF(
BEGINS(RIGHT($Organization.Id,10),'000')
,RIGHT($Organization.Id,7)
,IF(
BEGINS(RIGHT($Organization.Id,10),'00')
,RIGHT($Organization.Id,8)
,RIGHT($Organization.Id,9)
)
)
)
)
)
)
&amp;"._"
&amp;LEFT( Id , 5 )
&amp;IF(
BEGINS(RIGHT(Id,10),'000000')
,RIGHT(Id,4)
,IF(
BEGINS(RIGHT(Id,10),'00000')
,RIGHT(Id,5)
,IF(
BEGINS(RIGHT(Id,10),'0000')
,RIGHT(Id,6)
,IF(
BEGINS(RIGHT(Id,10),'000')
,RIGHT(Id,7)
,IF(
BEGINS(RIGHT(Id,10),'00')
,RIGHT(Id,8)
,IF(
BEGINS(RIGHT(Id,10),'0')
,RIGHT(Id,9)
,RIGHT(Id,10)
)
)
)
)
)
)
&amp;":ref"</formula>
        <label>Email Ref Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_Template_Disclosure__c</fullName>
        <label>Email Template Disclosure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Email_Template_Signature__c</fullName>
        <label>Email Template Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Entitlement_ID__c</fullName>
        <description>To manually capture the Entitlement ID when avaialble</description>
        <inlineHelpText>To manually capture the Entitlement ID when avaialble</inlineHelpText>
        <label>Entitlement ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Escalation_to__c</fullName>
        <description>Used as part of the case escalation process.</description>
        <inlineHelpText>Select the group that the case needs to be escalated to.</inlineHelpText>
        <label>Escalate To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU - Customer Support</fullName>
                </value>
                <value>
                    <fullName>AU - Install</fullName>
                </value>
                <value>
                    <fullName>AU - Technical Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Customer Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Install</fullName>
                </value>
                <value>
                    <fullName>BNL - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CH - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CH - Install</fullName>
                </value>
                <value>
                    <fullName>CH - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CN - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CN - Install</fullName>
                </value>
                <value>
                    <fullName>CN - Technical Support</fullName>
                </value>
                <value>
                    <fullName>DE - Customer Support</fullName>
                </value>
                <value>
                    <fullName>DE - Install</fullName>
                </value>
                <value>
                    <fullName>DE - Technical Support</fullName>
                </value>
                <value>
                    <fullName>EMEA - Install</fullName>
                </value>
                <value>
                    <fullName>ES - Customer Support</fullName>
                </value>
                <value>
                    <fullName>ES - Install</fullName>
                </value>
                <value>
                    <fullName>ES - Technical Support</fullName>
                </value>
                <value>
                    <fullName>FR - Customer Support</fullName>
                </value>
                <value>
                    <fullName>FR - Install</fullName>
                </value>
                <value>
                    <fullName>FR - Technical Support</fullName>
                </value>
                <value>
                    <fullName>Grenoble - Advanced Support</fullName>
                </value>
                <value>
                    <fullName>IN - Advanced Support</fullName>
                </value>
                <value>
                    <fullName>IN - Customer Support</fullName>
                </value>
                <value>
                    <fullName>IN - Install</fullName>
                </value>
                <value>
                    <fullName>IN - Technical Support</fullName>
                </value>
                <value>
                    <fullName>IT - Customer Support</fullName>
                </value>
                <value>
                    <fullName>IT - Install</fullName>
                </value>
                <value>
                    <fullName>IT - Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>    </validationRules></CustomObject>